create Params and use in services and actions